--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "galling-experience",
+  "name": "wbsd",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,8 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "node": "^19.0.0",
-    "node-js": "^1.0.0",
+    "body-parser": "^1.20.1",
+    "ejs": "^3.1.8",
+    "express": "^4.18.2",
+    "moment": "^2.29.4",
     "qs": "^6.11.0"
   }
 }
