--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,11 +15,15 @@
     "panel.border": "#0986d3"
   },
   "cSpell.words": [
+    "addressbook",
+    "Firstname",
     "grtr",
     "Hola",
     "IIFE",
+    "Lastname",
     "personjson",
     "qstr",
+    "Todos",
     "wbsd"
   ]
 }
