--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "moment": "^2.29.4",
+    "mongoose": "^6.7.0",
+    "mysql": "^2.18.1",
     "qs": "^6.11.0"
   }
 }
