updates: dbUrl changed

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,8 +21,10 @@
     "Hola",
     "IIFE",
     "Lastname",
+    "nodetest",
     "personjson",
     "qstr",
+    "qxtwfsu",
     "Todos",
     "wbsd"
   ]
