--- a/.eslintrc
+++ b/.eslintrc
@@ -1,22 +1,11 @@
 {
   "root": true,
   "parser": "@typescript-eslint/parser",
-  "plugins": [
-    "@typescript-eslint"
-  ],
-  "extends": [
-    "eslint:recommended",
-    "plugin:@typescript-eslint/eslint-recommended",
-    "plugin:@typescript-eslint/recommended"
-  ],
+  "plugins": ["@typescript-eslint"],
+  "extends": ["eslint:recommended", "plugin:@typescript-eslint/eslint-recommended", "plugin:@typescript-eslint/recommended"],
   "rules": {
     "eqeqeq": "error",
-    "key-spacing": [
-      "error",
-      {
-        "align": "colon"
-      }
-    ],
+    "key-spacing": ["error", { "align": "colon", "afterColon": true, "beforeColon": false }],
     "space-before-function-paren": [
       2,
       {
@@ -25,20 +14,34 @@
         "asyncArrow": "always"
       }
     ],
-    "quotes": [
-      "error",
-      "double"
-    ],
-    "camelcase": [
-      2,
-      {
-        "properties": "always"
-      }
-    ],
-    "semi": [
-      "error",
-      "always"
-    ]
+    "quotes": ["error", "double"],
+    "camelcase": [2, { "properties": "always" }],
+    "semi": ["error", "always"],
+    "@typescript-eslint/no-non-null-assertion": "off",
+    "indent": ["error", 2],
+    "@typescript-eslint/indent": ["warn", 2, { "ObjectExpression": 1 }],
+    "object-curly-spacing": ["error", "always"],
+    "comma-spacing": ["error", { "after": true }],
+    "comma-dangle": ["error", "never"],
+    "no-multiple-empty-lines": ["error", { "max": 1, "maxEOF": 0 }],
+    "eol-last": ["error", "never"],
+    "no-multi-spaces": ["error", { "ignoreEOLComments": false }],
+    "keyword-spacing": ["error", { "overrides": {
+      "if": { "before": true },
+      "for": { "after": true },
+      "while": { "after": true },
+      "static": { "after": true },
+      "as": { "after": true }
+    } }],
+    "space-before-blocks": ["error", {
+       "functions": "never",
+        "keywords": "always",
+         "classes": "never"
+    }],
+    "max-len": ["error", { 
+      "code": 200,
+      "ignoreUrls": true
+    }]
   },
   "globals": {
     "module": true
