--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,18 +1,22 @@
 {
   "workbench.colorCustomizations": {
     "commandCenter.border": "#e7e7e799",
-    "sideBar.border": "#0986d3",
-    "statusBar.background": "#0767a2",
+    "sideBar.border": "#133fec",
+    "statusBar.background": "#0f32bd",
     "statusBar.foreground": "#e7e7e7",
-    "statusBarItem.hoverBackground": "#0986d3",
-    "statusBarItem.remoteBackground": "#0767a2",
+    "statusBarItem.hoverBackground": "#133fec",
+    "statusBarItem.remoteBackground": "#0f32bd",
     "statusBarItem.remoteForeground": "#e7e7e7",
-    "tab.activeBorder": "#0986d3",
-    "titleBar.activeBackground": "#0767a2",
+    "tab.activeBorder": "#133fec",
+    "titleBar.activeBackground": "#0f32bd",
     "titleBar.activeForeground": "#e7e7e7",
-    "titleBar.inactiveBackground": "#0767a299",
+    "titleBar.inactiveBackground": "#0f32bd99",
     "titleBar.inactiveForeground": "#e7e7e799",
-    "panel.border": "#0986d3"
+    "panel.border": "#133fec",
+    "editorGroup.border": "#133fec",
+    "sash.hoverBorder": "#133fec",
+    "statusBar.debuggingBackground": "#bd9a0f",
+    "statusBar.debuggingForeground": "#ffffff"
   },
   "cSpell.words": [
     "addressbook",
