--- a/.eslintrc
+++ b/.eslintrc
@@ -4,6 +4,7 @@
   "plugins": ["@typescript-eslint"],
   "extends": ["eslint:recommended", "plugin:@typescript-eslint/eslint-recommended", "plugin:@typescript-eslint/recommended"],
   "rules": {
+    "@typescript-eslint/no-var-requires": "off",
     "eqeqeq": "error",
     "key-spacing": ["error", { "align": "colon", "afterColon": true, "beforeColon": false }],
     "space-before-function-paren": [
@@ -23,6 +24,7 @@
     "object-curly-spacing": ["error", "always"],
     "comma-spacing": ["error", { "after": true }],
     "comma-dangle": ["error", "never"],
+    "no-undef": "off",
     "no-multiple-empty-lines": ["error", { "max": 1, "maxEOF": 0 }],
     "eol-last": ["error", "never"],
     "no-multi-spaces": ["error", { "ignoreEOLComments": false }],
@@ -43,7 +45,12 @@
       "ignoreUrls": true
     }]
   },
+  "env": {
+    "es6": true
+  },
   "globals": {
-    "module": true
+    "module": true,
+    "var1": "writable",
+    "var2": "readonly"
   }
 }
