--- a/package.json
+++ b/package.json
@@ -12,11 +12,18 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.1",
-    "ejs": "^3.1.8",
-    "express": "^4.18.2",
+    "express": "^4.17.1",
+    "joi": "^17.8.3",
     "moment": "^2.29.4",
-    "mongoose": "^6.7.0",
-    "mysql": "^2.18.1",
-    "qs": "^6.11.0"
+    "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "@types/eslint": "^8.4.6",
+    "@types/express": "^4.17.14",
+    "@types/node": "^18.11.18",
+    "@typescript-eslint/eslint-plugin": "^5.39.0",
+    "@typescript-eslint/parser": "^5.39.0",
+    "eslint": "^8.24.0"
   }
 }
