--- a/.eslintrc
+++ b/.eslintrc
@@ -19,7 +19,7 @@
     "camelcase": [2, { "properties": "always" }],
     "semi": ["error", "always"],
     "@typescript-eslint/no-non-null-assertion": "off",
-    "indent": ["error", 2],
+    "indent": ["error", 2, { "SwitchCase": 1}],
     "@typescript-eslint/indent": ["warn", 2, { "ObjectExpression": 1 }],
     "object-curly-spacing": ["error", "always"],
     "comma-spacing": ["error", { "after": true }],
