--- a/.eslintrc
+++ b/.eslintrc
@@ -4,30 +4,15 @@
   "plugins": ["@typescript-eslint"],
   "extends": ["eslint:recommended", "plugin:@typescript-eslint/eslint-recommended", "plugin:@typescript-eslint/recommended"],
   "rules": {
-    "@typescript-eslint/no-var-requires": "off",
-    "eqeqeq": "error",
-    "key-spacing": ["error", { "align": "colon", "afterColon": true, "beforeColon": false }],
-    "space-before-function-paren": [
-      2,
-      {
-        "anonymous": "always",
-        "named": "always",
-        "asyncArrow": "always"
-      }
-    ],
-    "quotes": ["error", "double"],
-    "camelcase": [2, { "properties": "always" }],
-    "semi": ["error", "always"],
     "@typescript-eslint/no-non-null-assertion": "off",
-    "indent": ["error", 2, { "SwitchCase": 1}],
-    "@typescript-eslint/indent": ["warn", 2, { "ObjectExpression": 1 }],
-    "object-curly-spacing": ["error", "always"],
-    "comma-spacing": ["error", { "after": true }],
+    "@typescript-eslint/indent": ["off", 2, { "ObjectExpression": 1 }],
+    "@typescript-eslint/no-empty-function": "off",
+    "camelcase": [2, { "properties": "always" }],
     "comma-dangle": ["error", "never"],
-    "no-undef": "off",
-    "no-multiple-empty-lines": ["error", { "max": 1, "maxEOF": 0 }],
+    "comma-spacing": ["error", { "after": true }],
+    "eqeqeq": "error",
     "eol-last": ["error", "never"],
-    "no-multi-spaces": ["error", { "ignoreEOLComments": false }],
+    "indent": ["error", 2, { "SwitchCase": 1 }],
     "keyword-spacing": ["error", { "overrides": {
       "if": { "before": true },
       "for": { "after": true },
@@ -35,22 +20,34 @@
       "static": { "after": true },
       "as": { "after": true }
     } }],
-    "space-before-blocks": ["error", {
-       "functions": "never",
-        "keywords": "always",
-         "classes": "never"
+    "key-spacing": ["error", { 
+      "align": "colon",
+      "afterColon": true,
+      "beforeColon": false 
     }],
     "max-len": ["error", { 
       "code": 200,
       "ignoreUrls": true
+    }],
+    "no-mixed-spaces-and-tabs": "off",
+    "no-multiple-empty-lines": ["error", { "max": 1, "maxEOF": 0 }],
+    "no-multi-spaces": ["error", { "ignoreEOLComments": false }],
+    "no-trailing-spaces": ["error", { "skipBlankLines": false }],
+    "object-curly-spacing": ["error", "always"],
+    "quotes": ["error", "double"],
+    "semi": ["error", "always"],
+    "space-before-blocks": ["error", {
+      "functions": "never",
+      "keywords": "always",
+      "classes": "never"
+    }],
+    "space-before-function-paren": [2, {
+      "anonymous": "always",
+      "asyncArrow": "always",
+      "named": "always"
     }]
   },
-  "env": {
-    "es6": true
-  },
   "globals": {
-    "module": true,
-    "var1": "writable",
-    "var2": "readonly"
+    "module": true
   }
 }
